# ESP32_disk

./: README.en.md  README.md  sdkconfig  sdkconfig.old
components/AHT20/: ATH20.c  ATH20.h  CMakeLists.txt
components/WiFi_get_data/: CMakeLists.txt  WiFi_get_data.c  WiFi_get_data.h
components/char_conversion/: CMakeLists.txt  char_conversion.c  char_conversion.h  char_conversion_test_gbk.c  char_conversion_test_utf8.c  char_urldecode.c  char_urlencode.c
components/lvgl/: CMakeLists.txt  lv_conf.h
components/lvgl/demos/: lv_demos.h
components/lvgl/demos/music/: lv_demo_music.c
components/lvgl/lvgl_driver/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.h
components/lvgl/src/: lv_conf_internal.h
components/lvgl/user_lv_font/: test_nihao.c
components/lvgl/user_lv_img/: hutao0.c  hutao1.c  hutao10.c  hutao2.c  hutao3.c  hutao4.c  hutao5.c  hutao6.c  hutao7.c  hutao8.c  hutao9.c  test_1_img.c  test_2_img.c
components/peripheral/: CMakeLists.txt  peripheral.c  peripheral.h
components/task_manage/: CMakeLists.txt  task_manage.c  task_manage.h
components/ui_code/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui_code/components/: ui_comp_hook.c
components/ui_code/fonts/: ui_font_airtemp.c  ui_font_alibaba14.c  ui_font_alibaba20.c  ui_font_backlight.c  ui_font_humidity.c  ui_font_return.c  ui_font_right.c  ui_font_temp.c
components/ui_code/screens/: ui_Alarmevent.c  ui_WiFipage.c  ui_clockpage.c  ui_datapage.c  ui_homepage.c  ui_loadpage.c  ui_menupage.c
components/user_dev/: CMakeLists.txt
components/user_dev/SPI/: User_dev_spi.c  User_dev_spi.h
components/user_dev/TOUCH/: touch_iic.c  touch_iic.h
components/user_mid/: CMakeLists.txt  lcd.c  lcd.h
main/: CMakeLists.txt  main.c
